Fixed issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -61,15 +61,13 @@ header>ion-icon{
 #main{
 	padding-top: 30px;
 	background-color: white;
-	position: relative;
-	z-index: 1;
 }
 
 nav, nav2{
 	display: block;
 	position: fixed;
 	z-index: 2;
-	top: 74px;
+	top: 72px;
 	right: 0;
 	bottom: 0;
 	background-color: white;
@@ -275,21 +273,6 @@ nav ion-icon, nav2 ion-icon{
 	color: var(--black);
 }
 
-.hidden-div{
-	/*position: absolute;*/
-	align-items: flex-start;
-	/*height: 0px;
-	height: 270px;*/
-	z-index: -6;
-	background-color: white;
-}
-
-.youknow{	
-	position: relative;
-	background-color: white;
-	z-index: -2;
-}
-
 .hidden-div>a{
 	color: gray;
 	font-size: 0.9rem;
@@ -304,16 +287,19 @@ nav ion-icon, nav2 ion-icon{
 	margin-top: 0.5rem;
 }
 
+.hidden-div{
+	align-items: flex-start;
+}
+
 .above-footer, footer{
-	padding: 1.4rem 1.2rem 1rem;
+	padding: 1.4rem 0 1rem;
+	margin: 0 1.2rem;
 	border-bottom: 2px solid hsl(0, 0%, 88%);
 	background-color: white;
-	position: relative;
-	z-index: 0;
 }
 
 .dropdown-divs{
-	padding: 1.1rem 0;
+	padding: 1rem 0;
 	/*margin: 0.7rem 0;*/
 	/*cursor: pointer;*/
 	background-color: white;
@@ -362,6 +348,34 @@ footer>p{
 	color: hsl(0, 0%, 50%);
 }
 
+.dropdown-divs{
+	position: relative;
+	z-index: 1;
+}
+
+.youknow{
+	position: relative;
+	height: auto;
+}
+
+.hidden-div{
+	position: relative;
+}
+
+.afdivs:last-of-type{
+	padding-bottom: 1.4rem;
+}
+
+.above-footer{
+	padding-bottom: 0;
+}
+
+footer{
+	position: relative;
+	z-index: 1;
+}
+
+
 
 @media screen and (min-width: 768px){
 	#latte, #uber, #card, #black, #note{
@@ -385,7 +399,7 @@ footer>p{
 		display: block;
 	}
 
-	.menu-closed, .hidden-big{
+	.menu-closed{
 		display: none;
 	}
 
@@ -450,7 +464,7 @@ footer>p{
 	}
 
 	.text-area{
-		padding: 2rem 5rem 2rem;
+		padding: 2rem 5.1rem 2rem;
 	}
 
 	#uta>h2{
@@ -478,8 +492,8 @@ footer>p{
 	.above-footer{
 		display: flex;
 		flex-direction: row;
-		justify-content: space-evenly;
-		align-items: center
+		align-items: flex-start;
+		column-gap: 10px;
 	}
 
 	.dropdown-divs, .youknow{
@@ -513,5 +527,21 @@ footer>p{
 	.above-footer, footer{
 		margin: 0 2.5rem;
 		padding: 1.4rem 0 1rem;
+	}
+
+	.hidden-big{
+		display: none;
+	}
+
+	.afdivs{
+		width: 18%;
+	}
+
+	.dropdown-divs>p{
+		font-size: 1.15rem;
+	}
+
+	.dropdown-divs{
+		margin-bottom: 0.8rem;
 	}
 }
